kubernetes/apps/productivity/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    environment: productivity
    managed-by: flux
    pod-security.kubernetes.io/enforce: restricted
